new tests. new pool